--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set -sg escape-time 0
 
 set -g history-limit 50000
 
-set -g mouse on
+set -g mouse off
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 
