--- a/.ssh/config
+++ b/.ssh/config
@@ -1,21 +1,9 @@
 host ews
-  hostname linux.ews.illinois.edu 
+  hostname linux.ews.illinois.edu
   user durg2
 
 host cs241
-  hostname sp18-cs241-443.cs.illinois.edu
-  user durg2
-
-host cs241-deploy
-  hostname sp18-cs241-grd-13.cs.illinois.edu
-  user durg2
-
-host cs241-5
-  hostname sp18-cs241-grd-05.cs.illinois.edu
-  user durg2
-
-host cs423
-  hostname sp18-cs423-103.cs.illinois.edu
+  hostname fa18-cs241-448.cs.illinois.edu
   user durg2
 
 host contestServer
