--- a/i3_polybar/.i3/config
+++ b/i3_polybar/.i3/config
@@ -193,9 +193,9 @@ bindsym $mod+Escape exec --no-startup-id gnome-screensaver-command -l
 smart_borders on
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id python3.6 $HOME/.i3/pactl.py up
-bindsym XF86AudioLowerVolume exec --no-startup-id python3.6 $HOME/.i3/pactl.py down
-bindsym XF86AudioMute exec --no-startup-id python3.6 $HOME/.i3/pactl.py down
+bindsym XF86AudioRaiseVolume exec --no-startup-id $HOME/.i3/pactl.py up
+bindsym XF86AudioLowerVolume exec --no-startup-id $HOME/.i3/pactl.py down
+bindsym XF86AudioMute exec --no-startup-id $HOME/.i3/pactl.py mute
 
 bindsym $mod+XF86AudioMute exec --no-startup-id bash $HOME/.i3/mediactrl.sh play
 bindsym XF86AudioPlay exec --no-startup-id bash $HOME/.i3/mediactrl.sh play
@@ -207,6 +207,10 @@ bindsym XF86AudioNext exec --no-startup-id bash $HOME/.i3/mediactrl.sh next
 
 bindsym $mod+XF86AudioLowerVolume exec --no-startup-id bash $HOME/.i3/mediactrl.sh prev
 bindsym XF86AudioPrev exec --no-startup-id bash $HOME/.i3/mediactrl.sh prev
+
+## Screen brightness controls
+bindsym XF86MonBrightnessUp exec $HOME/.i3/bl_wrapper.py inc
+bindsym XF86MonBrightnessDown exec $HOME/.i3/bl_wrapper.py dec
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec dmenu_run
@@ -220,9 +224,6 @@ exec_always --no-startup-id bash $HOME/.i3/launch_polybar.sh
 
 for_window [class="Yad" title="yad-calendar"] floating enable
 #
-## Sreen brightness controls
-#bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-#bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
 
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
