--- a/i3_polybar/polybar/config
+++ b/i3_polybar/polybar/config
@@ -58,7 +58,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = mpd
-modules-right = filesystem xbacklight pulseaudio memory cpu wlan eth battery temperature date popup-calendar powermenu
+modules-right = filesystem xbacklight pulseaudio memory cpu wlan eth battery temperature popup-calendar
 
 tray-position = right
 tray-padding = 2
@@ -172,11 +172,11 @@ label-urgent-padding = ${module/bspwm.label-urgent-padding}
 type = internal/mpd
 format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
 
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
+icon-prev = <
+icon-stop = #
+icon-play = P
+icon-pause = |
+icon-next = >
 
 label-song-maxlen = 25
 label-song-ellipsis = true
@@ -280,7 +280,7 @@ format-volume = <label-volume> <bar-volume>
 label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = 🔇 muted
+label-muted = *muted
 label-muted-foreground = #666
 
 bar-volume-width = 10
@@ -387,7 +387,7 @@ expand-right = true
 
 format-spacing = 1
 
-label-open = 
+label-open = powermenu
 label-open-foreground = ${colors.secondary}
 label-close =  cancel
 label-close-foreground = ${colors.secondary}
@@ -396,13 +396,14 @@ label-separator-foreground = ${colors.foreground-alt}
 
 menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
+
 menu-0-1 = power off
 menu-0-1-exec = menu-open-2
 
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+menu-1-1-exec = sudo reboot now
 
 menu-2-0 = power off
 menu-2-0-exec = sudo poweroff
@@ -411,9 +412,9 @@ menu-2-1-exec = menu-open-0
 
 [module/popup-calendar]
 type = custom/script
-exec = ~/.i3/popup-calendar.sh
+exec = ~/.config/polybar/popup-calendar.py
 interval = 5
-click-left = ~/.i3/popup-calendar.sh --popup
+click-left = ~/.config/polybar/popup-calendar.py --popup
 
 [settings]
 screenchange-reload = true
