--- a/i3_polybar/.i3/config
+++ b/i3_polybar/.i3/config
@@ -23,6 +23,7 @@ font pango:monospace 8
 # clear in small sizes. However, its unicode glyph coverage is limited, the old
 # X core fonts rendering does not support right-to-left and this being a bitmap
 # font, it doesn't scale on retina/hidpi displays.
+set $mod Mod4
 
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
@@ -30,7 +31,6 @@ set $up k
 set $down j
 set $left h
 set $right l
-set $mod Mod4
 
 # use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -92,11 +92,11 @@ bindsym $mod+a focus parent
 bindsym $mod+Shift+a focus child
 
 # move the currently focused window to the scratchpad
-bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+Shift+slash move scratchpad
 
 # Show the next scratchpad window or hide the focused scratchpad window.
 # If there are multiple scratchpad windows, this command cycles through them.
-bindsym $mod+minus scratchpad show
+bindsym $mod+slash scratchpad show
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -170,6 +170,48 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Gaps + borders
+for_window [class="^.*"] border pixel 5
+gaps inner 20
+gaps outer 0
+smart_borders on
+
+# wallpaper
+set $wallpaper "/home/aneesh/Pictures/Wallpapers/1535939395676.png"
+exec_always --no-startup-id feh --no-fehbg --bg-scale $wallpaper
+
+# lockscreen
+exec --no-startup-id xautolock -time 5 -locker "gnome-screensaver-command -l"
+bindsym $mod+Escape exec --no-startup-id gnome-screensaver-command -l
+
+# Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec $HOME/.i3/pactl.py up
+bindsym XF86AudioLowerVolume exec $HOME/.i3/pactl.py down
+bindsym XF86AudioMute exec $HOME/.i3/pactl.py mute
+
+# Media control
+set $mediactrl "$HOME/.i3/mediactrl.sh"
+bindsym $mod+XF86AudioMute exec bash $mediactrl play
+bindsym XF86AudioPlay exec bash $mediactrl play
+bindsym XF86AudioPause exec bash $mediactrl play
+bindsym XF86AudioStop exec bash $mediactrl play
+
+bindsym $mod+XF86AudioRaiseVolume exec bash $mediactrlh next
+bindsym XF86AudioNext exec bash $mediactrl next
+
+bindsym $mod+XF86AudioLowerVolume exec bash $mediactrl prev
+bindsym XF86AudioPrev exec bash $mediactrl prev
+
+## Screen brightness controls
+bindsym XF86MonBrightnessUp exec $HOME/.i3/bl_wrapper.py inc
+bindsym XF86MonBrightnessDown exec $HOME/.i3/bl_wrapper.py dec
+
+# start rofi (a program launcher)
+bindsym $mod+d exec --no-startup-id rofi -modi drun -show drun
+bindsym $mod+Shift+d exec --no-startup-id rofi -show run
+# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+
+exec_always --no-startup-id bash $HOME/.i3/launch_polybar.sh
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # bar {
@@ -177,61 +219,12 @@ bindsym $mod+r mode "resize"
 #         position top
 # }
 
-for_window [class="^.*"] border pixel 5
+# Popup calendar
+for_window [class="Yad" title="yad-calendar"] floating enable
 
-gaps inner 20
-gaps outer 0
-exec_always --no-startup-id feh --no-fehbg --bg-scale /home/aneesh/Pictures/Wallpapers/1508008571985.jpg
+# misc
 exec --no-startup-id xset r rate 300 35 # Set initial delay 300ms, repeat 35ms
 exec --no-startup-id nm-applet
 exec --no-startup-id dunst
 
-# lockscrene
-exec --no-startup-id xautolock -time 5 -locker "gnome-screensaver-command -l"
-bindsym $mod+Escape exec --no-startup-id gnome-screensaver-command -l
 
-smart_borders on
-
-# Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id $HOME/.i3/pactl.py up
-bindsym XF86AudioLowerVolume exec --no-startup-id $HOME/.i3/pactl.py down
-bindsym XF86AudioMute exec --no-startup-id $HOME/.i3/pactl.py mute
-
-bindsym $mod+XF86AudioMute exec --no-startup-id bash $HOME/.i3/mediactrl.sh play
-bindsym XF86AudioPlay exec --no-startup-id bash $HOME/.i3/mediactrl.sh play
-bindsym XF86AudioPause exec --no-startup-id bash $HOME/.i3/mediactrl.sh play
-bindsym XF86AudioStop exec --no-startup-id bash $HOME/.i3/mediactrl.sh play
-
-bindsym $mod+XF86AudioRaiseVolume exec --no-startup-id bash $HOME/.i3/mediactrl.sh next
-bindsym XF86AudioNext exec --no-startup-id bash $HOME/.i3/mediactrl.sh next
-
-bindsym $mod+XF86AudioLowerVolume exec --no-startup-id bash $HOME/.i3/mediactrl.sh prev
-bindsym XF86AudioPrev exec --no-startup-id bash $HOME/.i3/mediactrl.sh prev
-
-## Screen brightness controls
-bindsym XF86MonBrightnessUp exec $HOME/.i3/bl_wrapper.py inc
-bindsym XF86MonBrightnessDown exec $HOME/.i3/bl_wrapper.py dec
-
-# start dmenu (a program launcher)
-# bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+d exec --no-startup-id rofi -show run
-
-exec_always --no-startup-id bash $HOME/.i3/launch_polybar.sh
-
-for_window [class="Yad" title="yad-calendar"] floating enable
-#
-
-#######################################################################
-# automatically start i3-config-wizard to offer the user to create a
-# keysym-based config which used their favorite modifier (alt or windows)
-#
-# i3-config-wizard will not launch if there already is a config file
-# in ~/.i3/config.
-#
-# Please remove the following exec line:
-#######################################################################
-# exec i3-config-wizard
