--- a/i3_polybar/polybar/config
+++ b/i3_polybar/polybar/config
@@ -52,13 +52,13 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
+font-0 = DejaVu:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = mpd
-modules-right = filesystem xbacklight pulseaudio memory cpu wlan eth battery temperature popup-calendar
+modules-right = xbacklight pulseaudio memory cpu wlan eth battery temperature popup-calendar
 
 tray-position = right
 tray-padding = 2
@@ -172,11 +172,11 @@ label-urgent-padding = ${module/bspwm.label-urgent-padding}
 type = internal/mpd
 format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
 
-icon-prev = <
-icon-stop = #
-icon-play = P
-icon-pause = |
-icon-next = >
+icon-prev = 
+icon-stop = 
+icon-play = 
+icon-pause = 
+icon-next = 
 
 label-song-maxlen = 25
 label-song-ellipsis = true
@@ -280,7 +280,7 @@ format-volume = <label-volume> <bar-volume>
 label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
-label-muted = *muted
+label-muted = muted
 label-muted-foreground = #666
 
 bar-volume-width = 10
