--- a/i3_polybar/.i3/config
+++ b/i3_polybar/.i3/config
@@ -211,6 +211,9 @@ bindsym $mod+d exec --no-startup-id rofi -modi drun -show drun
 bindsym $mod+Shift+d exec --no-startup-id rofi -show run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
+bindsym $mod+Tab move workspace to output right
+bindsym $mod+Shift+Tab move workspace to output left
+
 exec_always --no-startup-id bash $HOME/.i3/launch_polybar.sh
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
