--- a/i3_polybar/.i3/config
+++ b/i3_polybar/.i3/config
@@ -191,16 +191,19 @@ bindsym XF86AudioMute exec $HOME/.i3/pactl.py mute
 
 # Media control
 set $mediactrl "$HOME/.i3/mediactrl.sh"
-bindsym $mod+XF86AudioMute exec bash $mediactrl play
+# bindsym $mod+XF86AudioMute exec bash $mediactrl play
 bindsym XF86AudioPlay exec bash $mediactrl play
 bindsym XF86AudioPause exec bash $mediactrl play
 bindsym XF86AudioStop exec bash $mediactrl play
+bindsym XF86Tools exec bash $mediactrl play
 
-bindsym $mod+XF86AudioRaiseVolume exec bash $mediactrlh next
+# bindsym $mod+XF86AudioRaiseVolume exec bash $mediactrlh next
 bindsym XF86AudioNext exec bash $mediactrl next
+bindsym XF86LaunchA exec bash $mediactrl next
 
-bindsym $mod+XF86AudioLowerVolume exec bash $mediactrl prev
+# bindsym $mod+XF86AudioLowerVolume exec bash $mediactrl prev
 bindsym XF86AudioPrev exec bash $mediactrl prev
+bindsym XF86Explorer exec bash $mediactrl next
 
 ## Screen brightness controls
 bindsym XF86MonBrightnessUp exec $HOME/.i3/bl_wrapper.py inc
