--- a/i3_polybar/i3/config
+++ b/i3_polybar/i3/config
@@ -178,12 +178,17 @@ smart_borders on
 
 # Popup calendar
 for_window [class="Yad" title="yad-calendar"] floating enable
+for_window [urgent="latest"] focus
+for_window [class="Arandr"] floating enable
+
+focus_follows_mouse no
+# lockscreen
+exec --no-startup-id xautolock -time 5 -locker "/home/aneesh/.i3/locker.py"
+exec --no-startup-id ~/.i3/battery_mon.py
+
 # wallpaper
 set $wallpaper "/home/aneesh/Pictures/Wallpapers/1535939395676.png"
 exec_always --no-startup-id feh --no-fehbg --bg-scale $wallpaper
-
-# lockscreen
-exec --no-startup-id xautolock -time 5 -locker "/home/aneesh/.i3/locker.py"
 
 exec_always --no-startup-id bash $HOME/.i3/launch_polybar.sh
 # Start i3bar to display a workspace bar (plus the system information i3status
@@ -197,6 +202,10 @@ exec_always --no-startup-id bash $HOME/.i3/launch_polybar.sh
 exec --no-startup-id xset r rate 300 35 # Set initial delay 300ms, repeat 35ms
 exec --no-startup-id nm-applet
 exec --no-startup-id dunst
+#exec --no-startup-id deadd-notification-center
+exec --no-startup-id $HOME/.i3/urgent_switch.py
+exec --no-startup-id $HOME/.i3/dunst_pause.py
+exec --no-startup-id /usr/bin/libinput-gestures
 bindsym $mod+Escape exec $HOME/.i3/locker.py
 
 # Pulse Audio controls
@@ -214,11 +223,11 @@ bindsym XF86Tools exec bash $mediactrl play
 
 # bindsym $mod+XF86AudioRaiseVolume exec bash $mediactrlh next
 bindsym XF86AudioNext exec bash $mediactrl next
-bindsym XF86LaunchA exec bash $mediactrl next
+bindsym XF86Explorer exec bash $mediactrl next
 
 # bindsym $mod+XF86AudioLowerVolume exec bash $mediactrl prev
 bindsym XF86AudioPrev exec bash $mediactrl prev
-bindsym XF86Explorer exec bash $mediactrl next
+bindsym XF86LaunchA exec bash $mediactrl prev
 
 ## Screen brightness controls
 bindsym XF86MonBrightnessUp exec $HOME/.i3/bl_wrapper.py inc
@@ -233,4 +242,7 @@ bindsym $mod+space exec --no-startup-id rofi -show-icons -show window
 bindsym $mod+Tab move workspace to output right
 bindsym $mod+Shift+Tab move workspace to output left
 
+bindsym $mod+x [urgent=latest] focus
 
+bindsym $mod+p exec ~/.i3/dunst_pause.py --toggle
+bindsym $mod+shift+p exec notify-send hi
