--- a/i3_polybar/compton/compton.conf
+++ b/i3_polybar/compton/compton.conf
@@ -2,6 +2,9 @@
 # Full list of options at: https://github.com/chjj/compton/blob/master/man/compton.1.asciidoc
 
 # Performance tweak options, more info at https://github.com/chjj/compton/wiki
+backend = "glx";
+vsync = "opengl-swc";
+
 paint-on-overlay = true;        # Paint on X Composite overlay window instead of on root window
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
