Using tryone compton for blur

--- a/i3_polybar/compton/compton.conf
+++ b/i3_polybar/compton/compton.conf
@@ -1,3 +1,4 @@
+# Using https://github.com/tryone144/compton instead of default compton
 # Basic compton config with fade transition and shadows
 # Full list of options at: https://github.com/chjj/compton/blob/master/man/compton.1.asciidoc
 
@@ -38,3 +39,10 @@ wintypes:
   tooltip = { fade = true; shadow = false; };
   dock = { opacity = 0.9; };
 };
+
+ # active-opacity = 0.9; # default opacity for active windows. Might be overwritten by how a program is configured
+# inactive-opacity = 0.7; # opacity for inactive windows
+blur-background = true;
+blur-method = "kawase";
+blur-strength = 5;
+# inactive-dim = 0.4; # inactive windows are dimmed
