--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "z"]
 	path = z
 	url = https://github.com/rupa/z
+[submodule "spotifywm"]
+	path = spotifywm
+	url = https://github.com/dasJ/spotifywm
+[submodule "rofigen"]
+	path = rofigen
+	url = https://github.com/losoliveirasilva/rofigen
