--- a/i3_polybar/compton/compton.conf
+++ b/i3_polybar/compton/compton.conf
@@ -16,8 +16,7 @@ glx-no-rebind-pixmap = true;
 # i3 creates title bars as windows. I've only been able to circumvent this by removing title bars
 # completely - see my i3 config files.
 shadow = true;			            # Enabled client-side shadows on windows
-no-dock-shadow = true;		      # Avoid drawing shadows on dock/panel windows
-no-dnd-shadow = true;		        # Don't draw shadows on drag-and-drop windows
+no-dock-shadow = true;		      # Avoid drawing shadows on dock/panel windows no-dnd-shadow = true;		        # Don't draw shadows on drag-and-drop windows
 clear-shadow = true;		        # Zero the part of the shadow's mask behind the window (experimental)
 shadow-radius = 7;		          # The blur radius for shadows (default 12)
 shadow-offset-x = -7;		        # The left offset for shadows (default -15)
