--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -58,18 +58,18 @@
 # all example commands in this configuration file.
 #
 gesture swipe up	bash /home/aneesh/.i3/rofi.sh -show-icons -show window
-gesture swipe up 4	i3-msg workspace next
 
 # Move to prev workspace (works for GNOME/KDE/etc on Wayland and Xorg)
 #gesture swipe down	_internal ws_down
 gesture swipe down	xdotool key Escape
-gesture swipe down 4	i3-msg workspace prev
 
 # Browser go forward (works only for Xorg, and Xwayland clients)
-gesture swipe left	xdotool key alt+Left
+gesture swipe left bash /home/aneesh/.i3/ws_switcher.sh prev
+gesture swipe left 4 xdotool key alt+Left
 
 # Browser go back (works only for Xorg, and Xwayland clients)
-gesture swipe right	xdotool key alt+Right
+gesture swipe right bash /home/aneesh/.i3/ws_switcher.sh next
+gesture swipe right	4 xdotool key alt+Right
 
 # NOTE: If you don't use "natural" scrolling direction for your touchpad
 # then you may want to swap the above default left/right and up/down
