--- a/i3_polybar/compton/compton.conf
+++ b/i3_polybar/compton/compton.conf
@@ -45,3 +45,5 @@ blur-background = true;
 blur-method = "kawase";
 blur-strength = 5;
 # inactive-dim = 0.4; # inactive windows are dimmed
+
+opacity-rule ["0:name_g='zoom_linux_float_video_window'"]
