--- a/i3_polybar/i3/config
+++ b/i3_polybar/i3/config
@@ -36,7 +36,7 @@ set $right l
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -183,13 +183,27 @@ for_window [urgent="latest"] focus
 for_window [class="Arandr"] floating enable
 for_window [class="xpad"] floating enable
 
+# special floating terminal
+for_window [class="gterm-floating"] floating enable
+
+# zoom default window is floating
+for_window[title="Zoom - Licensed Account"] floating enable
+for_window[title="zoom"] floating enable
+for_window[title="Chat"] floating enable
+
 focus_follows_mouse no
+exec --no-startup-id lxpolkit
+
+# set tap to click
+exec_always ~/.i3/set_touchpad.py
+
 # lockscreen
+exec --no-startup-id gnome-screensaver
 exec --no-startup-id xautolock -time 10 -locker "/home/aneesh/.i3/locker.py"
 exec --no-startup-id ~/.i3/battery_mon.py
 
 # wallpaper
-set $wallpaper "/home/aneesh/Pictures/Wallpapers/1535939395676.png"
+set $wallpaper "/home/aneesh/Pictures/Wallpapers/M101HST-GendlerM.jpg"
 exec_always --no-startup-id feh --no-fehbg --bg-scale $wallpaper
 
 exec_always --no-startup-id bash $HOME/.i3/launch_polybar.sh
@@ -201,15 +215,14 @@ exec_always --no-startup-id bash $HOME/.i3/launch_polybar.sh
 # }
 
 # misc
-exec --no-startup-id xset r rate 300 35 # Set initial delay 300ms, repeat 35ms
 exec --no-startup-id nm-applet
 exec --no-startup-id dunst
 
 #exec --no-startup-id deadd-notification-center
 exec --no-startup-id $HOME/.i3/urgent_switch.py
-exec --no-startup-id $HOME/.i3/dunst_pause.py
+exec --no-startup-id $HOME/.i3/dunst_pause.py --start
 exec --no-startup-id /usr/bin/libinput-gestures
-exec_always --no-startup-id compton --config .config/compton/compton.conf -b
+exec --no-startup-id compton --config .config/compton/compton.conf -b
 bindsym $mod+Escape exec $HOME/.i3/locker.py
 
 # Pulse Audio controls
@@ -245,12 +258,18 @@ bindsym $mod+Shift+d exec --no-startup-id rofi -show-icons -show run
 bindsym $mod+space exec --no-startup-id rofi -show-icons -show window
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
-bindsym $mod+Tab move workspace to output right
-bindsym $mod+Shift+Tab move workspace to output left
+bindsym $mod+Tab move workspace to output up
+bindsym $mod+Shift+Tab move workspace to output down
 
 bindsym $mod+x [urgent=latest] focus
 
-bindsym $mod+p exec ~/.i3/dunst_pause.py --toggle
-bindsym $mod+shift+p exec notify-send hi
+bindsym $mod+p exec gnome-screenshot -i
+
+# bindsym $mod+p exec ~/.i3/dunst_pause.py --toggle
+bindsym $mod+shift+p exec bash -c "notify-send 'The time is $(date)'"
 
 bindsym Control+Mod1+Tab exec ~/.i3/window_launch.py
+
+bindsym Control+Up exec --no-startup-id rofi -show-icons -show window
+bindsym Control+Left exec ~/.i3/ws_switcher.sh prev
+bindsym Control+Right exec ~/.i3/ws_switcher.sh next
